--- a/alphabet-filter/package.json
+++ b/alphabet-filter/package.json
@@ -20,7 +20,7 @@
   "ngPackage": {
     "$schema": "./node_modules/ng-packagr/ng-package.schema.json",
     "lib": {
-      "entryFile": "src/public-api.ts"
+      "entryFile": "src/public_api.ts"
     },
     "dest": "../dist"
   }
