--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "postinstall": "ng build --aot --prod",
+    "demo": "node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "build:lib": "rimraf dist && npm run packagr && node copy",
     "packagr": "ng-packagr -p alphabet-filter/package.json"
+  },
+  "engines": {
+    "node": "8.11.3",
+    "npm": "6.4.1"
   },
   "private": true,
   "dependencies": {
@@ -22,14 +28,17 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
+    "fast-deep-equal": "^2.0.1",
+    "path": "^0.12.7",
     "rxjs": "^6.0.0",
+    "typescript": "~2.7.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
