--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "heroku-postbuild": "ng build --aot --prod && node server.js",
+    "heroku-postbuild": "ng build --aot --prod",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
