--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "fast-deep-equal": "^2.0.1",
+    "gh-pages": "^2.0.1",
     "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "typescript": "~2.7.2",
