--- a/package.json
+++ b/package.json
@@ -1,62 +1,63 @@
 {
-  "name": "alphabet-filter",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "heroku-postbuild": "ng build --aot --prod",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "build:lib": "rimraf dist && npm run packagr && node copy && cd dist && npm pack",
-    "publish-pkg": "pushd dist && npm publish",
-    "build-and-publish": "npm run build:lib && npm run publish-pkg",
-    "packagr": "ng-packagr -p alphabet-filter/package.json"
-  },
-  "engines": {
-    "node": "8.11.3",
-    "npm": "6.4.1"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
-    "core-js": "^2.5.4",
-    "express": "^4.16.3",
-    "fast-deep-equal": "^2.0.1",
-    "gh-pages": "^2.0.1",
-    "path": "^0.12.7",
-    "rxjs": "^6.0.0",
-    "typescript": "~2.7.2",
-    "zone.js": "^0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "cpx": "^1.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "3.0.0-rc.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
-  }
+    "name": "alphabet-filter",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "heroku-postbuild": "ng build --aot --prod",
+        "build": "ng build --prod",
+        "test": "ng test",
+        "lint": "ng lint",
+        "build:lib": "rimraf dist && npm run packagr && node copy && cd dist && npm pack",
+        "publish-pkg": "pushd dist && npm publish",
+        "build-and-publish": "npm run build:lib && npm run publish-pkg",
+        "packagr": "./node_modules/.bin/ng-packagr -p alphabet-filter/package.json"
+    },
+    "engines": {
+        "node": "8.11.3",
+        "npm": "6.4.1"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^6.0.3",
+        "@angular/common": "^6.0.3",
+        "@angular/compiler": "^6.0.3",
+        "@angular/core": "^6.0.3",
+        "@angular/forms": "^6.0.3",
+        "@angular/http": "^6.0.3",
+        "@angular/platform-browser": "^6.0.3",
+        "@angular/platform-browser-dynamic": "^6.0.3",
+        "@angular/router": "^6.0.3",
+        "core-js": "^2.5.4",
+        "express": "^4.16.3",
+        "fast-deep-equal": "^2.0.1",
+        "gh-pages": "^2.0.1",
+        "path": "^0.12.7",
+        "rxjs": "^6.0.0",
+        "typescript": "~2.7.2",
+        "zone.js": "^0.8.26"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.6.8",
+        "@angular/cli": "~6.0.8",
+        "@angular/compiler-cli": "^6.0.3",
+        "@angular/language-service": "^6.0.3",
+        "@types/jasmine": "~2.8.6",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~8.9.4",
+        "codelyzer": "~4.2.1",
+        "cpx": "^1.5.0",
+        "jasmine-core": "~2.99.1",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~1.7.1",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~2.0.0",
+        "karma-jasmine": "~1.1.1",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "ng-packagr": "3.0.0-rc.2",
+        "node-sass": "^4.13.1",
+        "protractor": "~5.3.0",
+        "ts-node": "~5.0.1",
+        "tslint": "~5.9.1"
+    }
 }
