--- a/alphabet-filter/package.json
+++ b/alphabet-filter/package.json
@@ -15,9 +15,9 @@
   "license": "MIT",
   "private": false,
   "peerDependencies": {
-    "@angular/core": ">=7.2.16",
-    "@angular/common": ">=6.0.3",
-    "@angular/forms": "^6.0.3"
+    "@angular/core": ">=9.1.9",
+    "@angular/common": ">=9.1.9",
+    "@angular/forms": ">=9.1.9"
   },
   "ngPackage": {
     "$schema": "./node_modules/ng-packagr/ng-package.schema.json",
